--- a/index.html
+++ b/index.html
@@ -10,37 +10,13 @@
 <h1>Audio</h1>
 
 <script>
-    function Audio(){
-        var audioCtx = new (window.AudioContext || window.webkitAudioContext)();
-        var a = audioCtx["createOscillator"]();
-        a.frequency.value = 440;
-        this.set_a_frequncy = function(f){
-            a.frequency.value = f;
-        }
-
-        a.start();
-        var b = audioCtx["createOscillator"]();
-        b.frequency.value = 2000;
-        this.set_b_frequncy = function(f){
-            b.frequency.value = f;
-        }
-
-        b.start();
-
-        this.start_a = function(){
-            a.connect(audioCtx.destination);
-        };
-        this.stop_a = function(){
-            a.disconnect();
-        };
-        this.start_b = function(){
-            b.connect(audioCtx.destination);
-        };
-        this.stop_b = function(){
-            b.disconnect();
-        };
-
-    }
+    window.audio=new(function(){
+        var audioCtx=new (window.AudioContext || window.webkitAudioContext)();
+        var a=audioCtx["createOscillator"]();a.detune.value=null;a.frequency.value=440;a.type="sine";a.start();this.set_a_detune=function(v){a.detune.value=v;};
+        this.get_a_detune=function(){return a.detune.value;};this.set_a_frequency=function(v){a.frequency.value=v;};
+        this.get_a_frequency=function(){return a.frequency.value;};this.set_a_type=function(v){a.type=v;};
+        this.get_a_type=function(){return a.type;};
+    });
 </script>
 
 </body>
